Add tables of contents to Jupyter notebooks

--- a/rnapoliii/analysis/.template.analysis.ipynb
+++ b/rnapoliii/analysis/.template.analysis.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get precalculated outputs\n",
+    "# Get precalculated outputs {#getoutputs}\n",
     "\n",
     "First, download `imp_tutorial_pol3_xl_cryoem_premodeling.v1.1.tar.gz` from [Zenodo](https://doi.org/10.5281/zenodo.3523241) and extract it in the same directory (`analysis`) as this notebook. (This should already have been done for you.)\n",
     "\n",
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Find good scoring models\n",
+    "# Find good scoring models {#filtermodels}\n",
     "\n"
    ]
   },
