--- a/rnapoliii/analysis/analysis.ipynb
+++ b/rnapoliii/analysis/analysis.ipynb
@@ -4,10 +4,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Analysis of integrative models \n",
+        "Analysis of integrative models<a id=\"mainpage\"></a>\n",
         "================================\n",
         "\n",
-        ""
+        "**Table of contents**\n\n - [Get precalculated outputs](#getoutputs)\n - [Find good scoring models](#filtermodels)\n - [Determining sampling precision, clustering, and computing localization densities](#sampprec)"
       ]
     },
     {
@@ -28,7 +28,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Get precalculated outputs\n",
+        "# Get precalculated outputs<a id=\"getoutputs\"></a>\n",
         "\n",
         "First, download `imp_tutorial_pol3_xl_cryoem_premodeling.v1.1.tar.gz` from [Zenodo](https://doi.org/10.5281/zenodo.3523241) and extract it in the same directory (`analysis`) as this notebook. (This should already have been done for you.)\n",
         "\n",
@@ -66,7 +66,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Find good scoring models\n",
+        "# Find good scoring models<a id=\"filtermodels\"></a>\n",
         "\n"
       ]
     },
@@ -249,7 +249,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Determining sampling precision, clustering, and computing localization densities \n",
+        "# Determining sampling precision, clustering, and computing localization densities<a id=\"sampprec\"></a>\n",
         "\n",
         "The `Master_Sampling_Exhaustiveness_Analysis.py` script is used to\n",
         "calculate the sampling precision of the modeling. During this step,\n",
