Add more info on DOIs, visualization

--- a/rnapoliii/deposition/Deposition.ipynb
+++ b/rnapoliii/deposition/Deposition.ipynb
@@ -7,7 +7,7 @@
         "Deposition of integrative models<a id=\"mainpage\"></a>\n",
         "================================\n",
         "\n",
-        "**Table of contents**\n\n - [Why PDB-Dev?](#whypdbdev)\n - [Why mmCIF?](#whymmcif)\n - [Why can't we convert PDB/RMF directly to mmCIF?](#whynotconvert)\n - [Generation of mmCIF files](#mmcifgen)\n - [Basic usage of ProtocolOutput](#basicusage)\n - [Linking to other data](#linking)\n - [Annotation of input files](#annotation)\n - [Polishing the deposition](#polishing)\n  - [Cross-linker type](#xltype)\n  - [Correct number of output models](#fixnummodel)\n  - [Add model coordinates](#addcoords)\n  - [Replace local links with DOIs](#adddois)\n - [Output](#output)\n - [Visualization](#visualization)\n  - [ChimeraX](#chimerax)\n  - [Web browser](#browser)\n  - [Plain text](#plain)"
+        "**Table of contents**\n\n - [Why PDB-Dev?](#whypdbdev)\n - [Why mmCIF?](#whymmcif)\n - [Why can't we convert PDB/RMF directly to mmCIF?](#whynotconvert)\n - [Generation of mmCIF files](#mmcifgen)\n - [Basic usage of ProtocolOutput](#basicusage)\n - [Linking to other data](#linking)\n - [Annotation of input files](#annotation)\n - [Polishing the deposition](#polishing)\n  - [Cross-linker type](#xltype)\n  - [Correct number of output models](#fixnummodel)\n  - [Add model coordinates](#addcoords)\n  - [Replace local links with DOIs](#adddois)\n - [Output](#output)\n - [Visualization](#visualization)\n  - [ChimeraX](#chimerax)\n  - [Web browser](#browser)\n  - [Plain text](#plain)\n  - [As Python objects](#python)"
       ]
     },
     {
@@ -674,9 +674,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "To add a model to the file, we create an [ihm.model.Model](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Model) object, add atoms or coarse-grained objects to it, and then add that to the previously-created [ModelGroup](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.ModelGroup). ProtocolOutput provides a convenience function `add_model` which does just that, passing the current IMP structure to python-ihm (we just need to load an IMP structure first, e.g. from an RMF file using [IMP.rmf.load_frame](https://integrativemodeling.org/2.11.1/doc/ref/namespaceIMP_1_1rmf.html#abc15209a0aef0e859c99ce00659ebdfb)).\n",
+        "To add a model to the file, we create an [ihm.model.Model](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Model) object, add atoms or coarse-grained objects to it, and then add that to the previously-created [ModelGroup](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.ModelGroup). ProtocolOutput provides a convenience function `add_model` which does this, converting the current IMP structure to python-ihm (we just need to load an IMP structure first, e.g. from an RMF file using [IMP.rmf.load_frame](https://integrativemodeling.org/2.11.1/doc/ref/namespaceIMP_1_1rmf.html#abc15209a0aef0e859c99ce00659ebdfb)).\n",
         "\n",
-        "mmCIF files allow for storing multiple conformations (like a traditional PDB file for storing an NMR ensemble). However, mmCIF is a text format and is not best suited for storing large numbers of structures. In this case we can store the coordinates in a simpler, binary file and link to it from the mmCIF using the [ihm.location.OutputFileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.OutputFileLocation) class, providing one or more representative structures (such as the cluster centroid) in the mmCIF file itself. [DCD](https://www.ks.uiuc.edu/Research/namd/2.9/ug/node11.html) is one such format that we can (ab)use for this purpose (it is really designed for atomic trajectories). python-ihm provides an [ihm.model.DCDWriter](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.DCDWriter) class which, given an [ihm.model.Model](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Model), will output DCD. Combining these, we can generate a DCD file for all models in the largest cluster:"
+        "We want to store more than just a single model in the file, since a single model cannot represent the flexibility and variability of the complete ensemble. mmCIF files allow for storing multiple conformations (like a traditional PDB file for storing an NMR ensemble) and also representations of the entire ensemble (localization densities).\n",
+        "\n",
+        "However, mmCIF is a text format and is not best suited for storing large numbers of structures. In this case we can store the coordinates in a simpler, binary file and link to it from the mmCIF using the [ihm.location.OutputFileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.OutputFileLocation) class, providing one or more representative structures (such as the cluster centroid) in the mmCIF file itself. [DCD](https://www.ks.uiuc.edu/Research/namd/2.9/ug/node11.html) is one such format that we can (ab)use for this purpose (it is really designed for atomic trajectories). python-ihm provides an [ihm.model.DCDWriter](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.DCDWriter) class which, given an [ihm.model.Model](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Model), will output DCD. Combining these, we can generate a DCD file for all models in the largest cluster:"
       ]
     },
     {
@@ -789,7 +791,52 @@
       "source": [
         "## Replace local links with DOIs<a id=\"adddois\"></a>\n",
         "\n",
-        "[Recall from earlier](#linking) that ProtocolOutput adds local paths for the cross-link CSV files and the Python script itself, which won't be visible to end users (we also added more local paths for localization densities and the DCD file with [ihm.location.OutputFileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.OutputFileLocation) objects). The simplest way to solve this issue is to put some or all of the files in zipfiles and upload them to a service that provides a DOI, such as [Zenodo](https://zenodo.org/) or [FigShare](https://figshare.com/), and then link to that DOI. We can do this by creating an [ihm.location.Repository](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.Repository) object for each zipfile, and then using the [ihm.System.update_locations_in_repositories](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System.update_locations_in_repositories) function to map local paths to files in the zipfile at the DOI:"
+        "We added paths for localization densities and the DCD file with [ihm.location.FileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.FileLocation) objects. These files won't be accessible to end users since they live on the local disk. ([Recall from earlier](#linking) that ProtocolOutput also adds local paths for the cross-link CSV files.)\n",
+        "\n",
+        "`FileLocation` takes an optional `repo` argument which, if given, is an [ihm.location.Repository](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.Repository) describing the DOI where the files can be found, generally as a `zip` or `tar(.gz)` file (the first argument to [ihm.location.FileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.FileLocation) is a path within the repository if `repo` is specified, otherwise a path on the local disk). So we could explicitly refer to a DOI for each of our external files. (A number of services provide DOIs for uploaded files, such as [Zenodo](https://zenodo.org/) or [FigShare](https://figshare.com/).)\n",
+        "\n",
+        "An alternative is to retroactively change the existing `FileLocation`s (both those created automatically by ProtocolOutput and manually by us using python-ihm) using the `root` and `top_directory` arguments to [Repository](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.Repository) and the [ihm.System.update_locations_in_repositories](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System.update_locations_in_repositories) function:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "datarepo = ihm.location.Repository(doi=\"10.5281/zenodo.3523241\",\n",
+        "            root=\"../data\", top_directory='data',\n",
+        "            url=\"https://zenodo.org/record/3523241/files/data.tar.gz\")\n",
+        "clusterrepo = ihm.location.Repository(doi=\"10.5281/zenodo.3523241\",\n",
+        "            root=\"../analysis/cluster.0\", top_directory='cluster.0',\n",
+        "            url=\"https://zenodo.org/record/3523241/files/cluster.0.tar.gz\")\n",
+        "s.update_locations_in_repositories([datarepo, clusterrepo])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Essentially, what this does is to rewrite all `FileLocation`s pointing to files under `root` (`../data`) to instead be found in the `top_directory` (`data`) subdirectory inside `url/doi` (`data.tar.gz` at the DOI [10.5281/zenodo.3523241](https://doi.org/10.5281/zenodo.3523241)). (A mandatory DOI is provided for permanence; an optional URL is provided to make it easier for software such as ChimeraX to download the file.) For example the local file `../data/foo/bar` would be found as `data/foo/bar` inside the tar file. A similar rewrite is done for the largest cluster files in `../analysis/cluster.0/`. We can now see that our input experimental information and output files point to DOIs:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Dataset for XL-MS restraint\n",
+        "d = s.restraints[0].dataset\n",
+        "print(\"XL-MS dataset at %s/%s inside %s\"\n",
+        "      % (d.location.repo.top_directory,\n",
+        "         d.location.path, d.location.repo.url))\n",
+        "\n",
+        "# First localization density\n",
+        "d = e.densities[0]\n",
+        "print(\"Localization density at %s/%s inside %s\"\n",
+        "       % (d.file.repo.top_directory,\n",
+        "          d.file.path, d.file.repo.url))"
       ]
     },
     {
@@ -829,7 +876,7 @@
         "\n",
         "[VMD](http://www.ks.uiuc.edu/Research/vmd/) is also reportedly working on support in their forthcoming 1.9.4 release.\n",
         "\n",
-        "An example view of the deposition, as rendered by ChimeraX, is shown below. The EM map is shown as a mesh, and the DSS cross-links as green dashed lines."
+        "An example view of the deposition, as rendered by ChimeraX, is shown below. The EM map is shown as a mesh, and the DSS cross-links as green dashed lines. ChimeraX also shows the comparative models used as starting guesses for the subunit structures - toggle off the display of the result models to see them."
       ]
     },
     {
@@ -845,7 +892,7 @@
       "source": [
         "## Web browser<a id=\"browser\"></a>\n",
         "\n",
-        "mmCIF files can also be viewed in a web browser, using [Mol* Viewer](https://molstar.org/viewer). (Note that it currently only shows the coordinates, not the experimental information or other metadata.)\n",
+        "mmCIF files can also be viewed in a web browser, using [Mol* Viewer](https://molstar.org/viewer). (Note that it currently only shows the coordinates, not the experimental information or other metadata.) An example rendering is shown below.\n",
         "\n",
         "<img src=\"images/molstar.png\" width=\"700px\" title=\"Molstar visualization of rnapoliii mmCIF file\" />"
       ]
@@ -885,6 +932,46 @@
         "This simply states that a sphere representing residues 1 through 10 in chain A is centered\n",
         "at (124.581, 133.035, 33.707) and has radius 5.992, and so on.\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## As Python objects<a id=\"python\"></a>\n",
+        "\n",
+        "We can also read in mmCIF or BinaryCIF files using python-ihm's [ihm.reader](https://python-ihm.readthedocs.io/en/latest/reader.html#module-ihm.reader) module and explore the data using the python-ihm API. For example, we can read the structure we just created:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import ihm.reader\n",
+        "with open('rnapoliii.cif') as fh:\n",
+        "    s, = ihm.reader.read(fh)\n",
+        "print(s.title, s.restraints, s.ensembles, s.state_groups)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Similarly we could explore any integrative model deposited in PDB-Dev. For example we can look at PDB-Dev \\#14, a [HADDOCK](http://www.bonvinlab.org/software/haddock2.2/) model:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import urllib.request\n",
+        "with urllib.request.urlopen('https://pdb-dev.wwpdb.org/static/cif/PDBDEV_00000014.cif') as fh:\n",
+        "    s, = ihm.reader.read(fh)\n",
+        "print(s.title, s.restraints, s.ensembles, s.state_groups)"
+      ]
     }
   ],
   "metadata": {
@@ -903,7 +990,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.4"
+      "version": "3.7.5"
     }
   },
   "nbformat": 4,
