Show result plots

--- a/rnapoliii/analysis/.template.analysis.ipynb
+++ b/rnapoliii/analysis/.template.analysis.ipynb
@@ -345,6 +345,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Results {#results}\n",
+    "\n",
+    "Once the script completes, a number of outputs are created:\n",
+    "\n",
+    " - Several text files with information about the clustering\n",
+    " - A number of plots in PDF format\n",
+    " - A directory for each cluster (e.g. `cluster.0`, `cluster.1`, etc.)\n",
+    "   containing the requested localization densities (for each sample\n",
+    "   individually, and for the combined samples), and an RMF file for\n",
+    "   the cluster centroid.\n",
+    "   \n",
+    "The generated plots are shown below:\n",
+    "\n",
+    "<img src=\"images/allplots.png\" width=700px title=\"All output plots\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"images/clustering.png\" width=600px title=\"Clustering\" />"
    ]
   }
