--- a/rnapoliii/analysis/analysis.ipynb
+++ b/rnapoliii/analysis/analysis.ipynb
@@ -7,7 +7,7 @@
         "Analysis of integrative models<a id=\"mainpage\"></a>\n",
         "================================\n",
         "\n",
-        "**Table of contents**\n\n - [Get precalculated outputs](#getoutputs)\n - [Find good scoring models](#filtermodels)\n - [Determining sampling precision, clustering, and computing localization densities](#sampprec)"
+        "**Table of contents**\n\n - [Get precalculated outputs](#getoutputs)\n - [Find good scoring models](#filtermodels)\n - [Determining sampling precision, clustering, and computing localization densities](#sampprec)\n - [Results](#results)"
       ]
     },
     {
@@ -339,6 +339,26 @@
         "       -n rnapoliii -p good_scoring_models/ \\\n",
         "       -d density_ranges.txt -m cpu_omp -c 8 \\\n",
         "       -a -g 0.1 -gp"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Results<a id=\"results\"></a>\n",
+        "\n",
+        "Once the script completes, a number of outputs are created:\n",
+        "\n",
+        " - Several text files with information about the clustering\n",
+        " - A number of plots in PDF format\n",
+        " - A directory for each cluster (e.g. `cluster.0`, `cluster.1`, etc.)\n",
+        "   containing the requested localization densities (for each sample\n",
+        "   individually, and for the combined samples), and an RMF file for\n",
+        "   the cluster centroid.\n",
+        "   \n",
+        "The generated plots are shown below:\n",
+        "\n",
+        "<img src=\"images/allplots.png\" width=700px title=\"All output plots\" />"
       ]
     },
     {
