--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -207,10 +207,10 @@
     "python modeling.py\n",
     "```\n",
     "\n",
-    "It will take a very long time to complete the sampling; to get an idea of what's going on you can run it with only 50 output frames by adding the `--test` option:\n",
+    "It will take a very long time to complete the sampling; to get an idea of what's going on you can run it with only 50 output frames by:\n",
     "\n",
     "```\n",
-    "python modeling.py --test\n",
+    "python test.py\n",
     "```"
    ]
   },
@@ -303,7 +303,10 @@
     "---\n",
     "\n",
     "<figure><img src=\"files/images/rnapoliii_C34_homology.png\" width=\"300px\" />\n",
-    "<figcaption>_Homology model of three domains of C34 based on [2DK8](http://www.rcsb.org/pdb/explore.do?structureId=2DK8)_, [2DK5](http://www.rcsb.org/pdb/explore.do?structureId=2DK5)_, [1LDD](http://www.rcsb.org/pdb/explore.do?structureId=1LDD)_</figcaption></figure>\n",
+    "<figcaption>_Homology model of three domains of C34 based on \n",
+    "[2DK8](http://www.rcsb.org/pdb/explore.do?structureId=2DK8), \n",
+    "[2DK5](http://www.rcsb.org/pdb/explore.do?structureId=2DK5), \n",
+    "[1LDD](http://www.rcsb.org/pdb/explore.do?structureId=1LDD) </figcaption></figure>\n",
     "\n",
     "**Chemical Cross-Links**  \n",
     "All chemical cross-linking data is located in `FerberKosinski2016_apo.csv` and `FerberKosinski2016_apo.csv`.  These files contain multiple comma-separated columns; four of these specify the protein and residue number for each of the two linker residues. The length of the DSS/BS3 cross-linker reagent, 21 angstroms, will be specified later in the modeling script.  "
@@ -411,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There hare two options. Either we use only the crosslinks, or we use the crosslinks with the cryoEM data. This option is encoded in the following variable, and will import relevant libraries "
+    "There are two options. Either we use only the crosslinks, or we use the crosslinks with the cryoEM data. This option is encoded in the following variable, and will import relevant libraries "
    ]
   },
   {
@@ -912,7 +915,7 @@
     "> The cryoEM modeling is slightly different. It uses an iterative approach where the model is refined using gmms with increasing number of components. At the end of each calculation a seed is generated (see below), and used to start a new modeling run.\n",
     "\n",
     "> <figure><img src=\"files/images/rnapoliii_sampling_cryoem.png\" width=\"600px\" />\n",
-    "> <figcaption>_Iterative refined based on seeding and increasing the components in the GMM_</figcaption></figure>"
+    "> <figcaption>_Iterative refinement based on seeding/increasing the components in the GMM_</figcaption></figure>"
    ]
   },
   {
@@ -1074,7 +1077,7 @@
     "\n",
     "### Precomputed results <a name=\"Precomputed_Results_3\"></a>\n",
     "\n",
-    "A long modeling run was precomputed and analyzed. You can [download] it from our website, and you can [download](https://zenodo.org/record/3523241#.XbtB0y2ZMY2) from the Zenodo repository.\n",
+    "A long modeling run was precomputed and analyzed. You can [download] it from our website, and you can [download](https://zenodo.org/record/3523241#.XbtB0y2ZMY2) from the Zenodo repository. For your convenience, the 150 best scoring models from each run were extracted and put in the `results` directory under the names `150_xl.rmf`: the XL-only modeling run; `150_xl_cryoem_1.rmf`: the first refinement of the XL+cryoEM modeling run; `150_xl_cryoem_2.rmf`: the second refinement of the XL+cryoEM modeling run; `150_xl_cryoem_1.rmf`: the third and last refinement of the XL+cryoEM modeling run. \n",
     "\n",
     "### Clustering top models using `analysis.py` <a name=\"Clustering_3\"></a>\n",
     "The `long_analysis.py` script, found in the `modeling` directory, calls the [AnalysisReplicaExchange](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1pmi_1_1macros_1_1AnalysisReplicaExchange.html) macro, which finds top-scoring models, extracts coordinates, runs clustering, and does basic cluster analysis including creating localization densities for each subunit. The script generates RMF, MRC files which should be viewable in Chimera.\n",
@@ -1096,8 +1099,8 @@
    "outputs": [],
    "source": [
     "are=IMP.pmi.macros.AnalysisReplicaExchange(m,\n",
-    "                 [\"./output/rmfs/0.rmf3\"],\n",
-    "                 best_models=100,\n",
+    "                 [\"./results/150_xl_cryoem_3.rmf\"],\n",
+    "                 best_models=150,\n",
     "                 alignment=False)\n",
     "\n",
     "print(are)"
@@ -1109,7 +1112,7 @@
    "source": [
     "Then, we start the clustering. \n",
     "We specify the components used in calculating the RMSD between models. \n",
-    "Then we cluster using a rmsd threshold of 30 Angstroms."
+    "Then we cluster using a rmsd threshold of 10 Angstroms."
    ]
   },
   {
@@ -1118,9 +1121,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "are.set_rmsd_selection(molecules=[\"C31\",\"C34\"])\n",
+    "are.set_rmsd_selection(molecules=[\"C31\",\"C34\",\"C53\",\"C37\",\"C82\"])\n",
     "\n",
-    "are.cluster(30.0)"
+    "are.cluster(10.0)"
    ]
   },
   {
@@ -1148,27 +1151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can get a given cluster by using the square bracket, as in lists, for instance `are[0]` is the cluster with index 0. Using the list properties of the object `are`, we get the best scoring cluster."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from operator import attrgetter\n",
-    "    \n",
-    "best_cluster=min(are,key=attrgetter('average_score'))\n",
-    "\n",
-    "print(best_cluster)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can iterate on the members of the cluster to display the infos. Afterwords, we save the coordinates of the cluster in a rmf file."
+    "We can get a given cluster by using the square bracket, as in lists, for instance `are[0]` is the cluster with index 0. We can iterate on the members of the cluster to display the infos. Afterwords, we save the coordinates of the cluster in a rmf file."
    ]
   },
   {
@@ -1191,7 +1174,7 @@
     "\n",
     "The second plot is a dendrogram, basically showing the distance matrix in a hierarchical way. Each vertical line from the bottom is a model, and the horizontal lines show the RMSD agreement between models. Sometimes the dendrogram can indicate a natural number of clusters, which can help determine the correct threshold to use. \n",
     "\n",
-    "<img src=\"files/images/rnapolii_dist_matrix.png\" alt=\"Distance matrix and dendrogram\" width=\"600px\" />\n"
+    "<img src=\"files/images/rnapoliii_rmsd_plot.png\" alt=\"Distance matrix and dendrogram\" width=\"600px\" />\n"
    ]
   },
   {
@@ -1202,6 +1185,96 @@
    "source": [
     "# slow!\n",
     "are.plot_rmsd_matrix(\"rmsd_matrix.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bayesian crosslink restraint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For what concern the *Bayesian crosslink restraint*, we can plot the three classes (low-, mid-, and high-confidence) the distances of the crosslinks, as well as the corresponding values of the variables psi and sigma. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys=[k for k in are[0][0].features.keys() if \"CrossLinkingMassSpectrometryRestraint\" in k]\n",
+    "figure()\n",
+    "for ind in [\"0\",\"1\",\"2\"]:\n",
+    "    distances={}\n",
+    "    psi=[]\n",
+    "    sigma=[]\n",
+    "    for member in are[0]:\n",
+    "        for k in keys:\n",
+    "            if \"CLASS_\"+str(ind) in k and \"Distance\" in k:\n",
+    "                if k in distances:\n",
+    "                    distances[k].append(float(member.features[k]))\n",
+    "                else:\n",
+    "                    distances[k]=[float(member.features[k])]\n",
+    "            if \"CLASS_\"+str(ind) in k and \"Psi\" in k and \"MonteCarlo\" not in k:\n",
+    "                psi.append(float(member.features[k]))\n",
+    "            if \"SIGMA\" in k and \"Sigma\" in k and \"MonteCarlo\" not in k:\n",
+    "                sigma.append(float(member.features[k]))\n",
+    "\n",
+    "    x=[distances[k] for k in distances]\n",
+    "    pylab.boxplot(x);\n",
+    "    figure()\n",
+    "    pylab.plot(range(len(psi)),psi);\n",
+    "    figure()\n",
+    "pylab.plot(range(len(sigma)),sigma);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Create a seed<a name=\"seed_3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> As discussed above, a seed needs to be generated to use the iterative refinement protocol. A seed is a set of conformations, sampled during the modeling, which will be used to start each replica of the Replica Exchange sampling algorithm. In this case we need 48 structures in our seed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### build the seed \n",
+    "\n",
+    "rmf_name = \"seed.rmf3\"\n",
+    "o=IMP.pmi.output.Output()\n",
+    "o.init_rmf(rmf_name, [are.stath1])\n",
+    "\n",
+    "nreplicas=48\n",
+    "structures=[]\n",
+    "nloop=0\n",
+    "while len(structures) < nreplicas:\n",
+    "    for c in are:\n",
+    "        try:\n",
+    "            structures.append(c.members[nloop])\n",
+    "        except:\n",
+    "            continue\n",
+    "    nloop+=1\n",
+    "\n",
+    "for n in structures:\n",
+    "    are.stath1[n]\n",
+    "    o.write_rmf(rmf_name)\n",
+    "\n",
+    "o.close_rmf(rmf_name)"
    ]
   },
   {
@@ -1249,9 +1322,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And compute the the rmsf for all molecules and map the value on the structure. Finally we save the colored cooridnates in a rmf file.\n",
+    "And compute the the rmsf for all molecules and map the value on the structure. Finally we save the colored coordinates in a rmf file.\n",
     "\n",
-    "<img src=\"files/images/rnapolii_rmsf.all.png\" alt=\"Structural uncertainty\" width=\"600px\" />"
+    "<img src=\"files/images/rnapoliii_rmsf.png\" alt=\"Structural uncertainty\" width=\"600px\" />"
    ]
   },
   {
@@ -1274,13 +1347,10 @@
     "We can save the localization densities of a given cluster, for given groups of molecules.\n",
     "Now we specify the subunits (or groups or fractions of subunits) for which we want to create density localization maps. \n",
     "`density_names` is a dictionary, where the keys are convenient names like \"C31\" and the values are a list of selections. \n",
-    "The selection items can either be a domain name like \"Rpb1\" or a list like (200,300,\"C31\") \n",
-    "which means residues 200-300 of component C31. This enables the user to combine multiple selections \n",
-    "for a single density calculation.\n",
     "\n",
-    "The localization densities can give a qualitative idea of the precision of a cluster. Below we show results from `cluster.1` in the provided results: the native structure without C53/C37 (in blue), the target density map (in mesh), and the localization densities (Rpb4 in cyan, Rpb7 in purple). The localizations are quite narrow and close to the native solution:\n",
+    "The localization densities can give a qualitative idea of the precision of a cluster. Below we show results from `Cluster-0` in the provided results. The localizations are quite narrow and close to the native solution:\n",
     "\n",
-    "<img src=\"files/images/rnapolii_localization.png\" alt=\"Localization densities\" width=\"600px\" />"
+    "<img src=\"files/images/rnapoliii_density.png\" alt=\"Localization densities\" width=\"600px\" />"
    ]
   },
   {
@@ -1289,10 +1359,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "density_names={\"REST\":[\"Rpb1\",\"Rpb2\",\"Rpb3\",\"Rpb5\",\"Rpb6\",\"Rpb8\",\"Rpb9\",\"Rpb10\",\"Rpb11\",\"Rpb12\"],\n",
-    "     \"Rpb4\":[\"Rpb4\"],\n",
-    "     \"Rpb7\":[\"Rpb7\"],\n",
-    "     \"Rpb1-200-300\":[(200,300,\"Rpb1\")]}\n",
+    "density_names={'core': ['ABC23','ABC10beta','ABC14_5','ABC27','C25','AC40','C160','ABC10alpha','C128','AC19','C11','C17'],\n",
+    "               'C53': ['C53'], \n",
+    "               'C37': ['C37'], \n",
+    "               'C34': ['C34'], \n",
+    "               'C82': ['C82'], \n",
+    "               'C31': ['C31']}\n",
     "\n",
     "# you can iterate on the clusters\n",
     "for n,a in enumerate(are):\n",
@@ -1303,7 +1375,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can compute the global contact map of the whole complex for the second cluster."
+    "We can compute the global contact map of the whole complex for the cluster.\n",
+    "\n",
+    "<img src=\"files/images/rnapoliii_contact_map.png\" alt=\"Localization densities\" width=\"600px\" />"
    ]
   },
   {
